Legger til kt-lint med config. Denne kjøres nå i Github workflow.